# adm-monai-unet

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: release.md
examples/: class_condition_usage.py  monai_style_usage.py
results/param_matched/: summary.csv  summary.json
results/quick/: summary.csv  summary.json
scripts/: run_parameter_matched_experiments.py  run_representative_experiments.py
src/adm_monai_unet/: __init__.py  adm_unet.py  fp16_util.py  monai.py  nn.py
src/adm_monai_unet/experiments/: __init__.py  run_comparison.py  run_parameter_matched.py
tests/: test_adm_monai_unet.py
