[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adm-monai-unet"
version = "0.1.0"
description = "MONAI-compatible wrapper around the ADM 3D timestep-conditioned U-Net."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [
  {name = "Shuanghan Zhang"}
]
keywords = ["ADM", "MONAI", "3D U-Net", "medical imaging", "PyTorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.22",
  "torch>=2.0"
]

[project.urls]
Homepage = "https://github.com/szhan311/adm-monai-unet"
Repository = "https://github.com/szhan311/adm-monai-unet"
Issues = "https://github.com/szhan311/adm-monai-unet/issues"
Changelog = "https://github.com/szhan311/adm-monai-unet/blob/main/CHANGELOG.md"

[project.optional-dependencies]
monai = [
  "monai>=1.3"
]
experiments = [
  "monai>=1.3"
]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.4",
  "twine>=5"
]
flash = [
  "einops>=0.6",
  "flash-attn>=2.0"
]

[project.scripts]
adm-unet-experiments = "adm_monai_unet.experiments.run_comparison:main"
adm-unet-param-matched = "adm_monai_unet.experiments.run_parameter_matched:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
